Pass AbstractType::Ptr, not Declaration*, to accessAttribute()

All but one caller had to look up the declaration only to have it converted
  back, so the previous version was pointless anyway.

This allows subscripting of expressions (inc. other subscripts), when the
  subscripted type isn't a ListType/IndexedContainer.

BUG: 359912
Differential Revision: https://phabricator.kde.org/D3422